@@ -1,12 +1,0 @@
-﻿using System;
-
-namespace DiscImageChef.ImagePlugins
-{
-    public class _MG
-    {
-        public _MG()
-        {
-        }
-    }
-}
-
