@@ -1,6 +1,11 @@
 2015-10-05  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.sln:
+	  Move decoders to a separate library.
+
+2015-10-05  Natalia Portillo  <claunia@claunia.com>
+
+	* DiscImageChef.sln:
 	  Move filesystems to a separate library.
 
 2015-10-05  Natalia Portillo  <claunia@claunia.com>
